<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/iv_splash_logo"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/linguaflow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_splash_logo" >

        <TextView
            android:id="@+id/tv_splash_lingua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lingua"
            android:textColor="@color/primary"
            android:textSize="52sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_splash_flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flow"
            android:textColor="@color/primaryBg"
            android:textSize="52sp"
            android:textStyle="bold"/>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>