<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#EFE167"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/source_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/primary">

        <AutoCompleteTextView
            android:id="@+id/source_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/source_language"
            android:inputType="none"
            android:padding="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/target_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintTop_toBottomOf="@id/source_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/primary">

        <AutoCompleteTextView
            android:id="@+id/target_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/target_language"
            android:inputType="none"
            android:padding="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/target_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_source"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/enter_the_text_to_translate"
            android:textSize="16sp"
            android:scrollbars="vertical"
            android:background="@drawable/edittext_bg"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:maxLines="5"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/translate"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:backgroundTint="@color/primary"
        app:cornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintTop_toBottomOf="@id/btn_translate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:overScrollMode="always">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is_the_translated_text"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="12dp"
        android:scrollbars="vertical"
        android:maxLines="5"/>
    </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
